# tfview

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  README.md  dune-project  dune-workspace  models.inc  package-lock.json  package.json
.ai/: aten_core_build.md  aten_op_schema.md  aten_static_dispatch.md  codegen_design.md  dune_cram_patterns.md  func_ast_refactor.md  jsont_patterns.md  model_json.md  project_overview.md  pt2_archive.md  raw_ml_types.md  schema_meta_parser.md  schema_yaml_format.md  tensor_api_plan.md  testing_strategy.md  weights_config_json.md
.claude/: settings.local.json
.claude/memory/: MEMORY.md  README.md  aten-clang-lld-toolchain.md  aten-core-build-closure.md  aten-schema-staged-plan.md  aten-static-dispatch.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/features/claude-code/: devcontainer-feature.json  install.sh
.devcontainer/features/gh/: devcontainer-feature.json  install.sh
.devcontainer/features/npm/: devcontainer-feature.json  install.sh
.devcontainer/features/ocaml/: devcontainer-feature.json  install.sh
.github/: dependabot.yml
.github/workflows/: build.yml  deploy-pages.yml  ocaml-build.yml  ocaml-images.yml
.github/workflows/actions/devcontainer/: action.yml
data/: dune
lib/: dune  schema.ml  schema.mli
lib/aten/: atg_shim.cpp  atg_shim.h  build_archive.sh  dtype.ml  dune  function_description.ml  operation_description.ml  ops.cpp  ops.h  scalar_type.ml  shim.cpp  shim.h  stubs.cpp  tensor.ml  type_description.ml
lib/aten/demo/: demo.t  dune  main.ml
lib/aten_gen/: c_type.ml  dune  emit.ml  gen.ml
lib/aten_schema/: dune  func_ast.ml  func_lexer.mll  func_parser.mly  func_schema.ml  raw.ml
lib/graph/: dune  graph.ml
lib/print/: dune  print.ml
lib/pytorch_schema/: dune  pytorch_schema.ml  scc.ml  schema_codegen.ml  type_expr.ml  type_expr_lexer.mll  type_expr_parse.ml  type_expr_parser.mly
lib/schema_runtime/: dune
lib/tflite_schema/: dune  tflite_schema.ml  tflite_schema.mli
modules/: dune
modules/aten_core/: build_archive.sh  dune  gen_macros.sh  run_codegen.sh  shim.cpp  shim.h  stubs.cpp
test/: aten_gen_coverage.ml  aten_gen_coverage_cram.t  aten_gen_test.ml  aten_ops_test.ml  aten_schema_func_cram.t  aten_schema_func_test.ml  aten_schema_raw_cram.t  aten_schema_raw_test.ml  aten_tensor_test.ml  codegen_test.ml  default_cram.t  dune  func_parser_test.ml  jsont_explore_cram.t  model_cram.t  model_test_utils.ml  models_cram.t  parse_cram.t  parse_weights_config.ml  scc_test.ml  schema_cram.t  type_expr_test.ml  weights_config_cram.t
tools/: download-model.sh  verify-model-output.sh
web/: serve.js  test_browser.js  test_graph_browser.js  test_web.js
web-jsoo/: dune  index.html  test_browser.js  test_web.js  tfview_web.ml
web-jsoo/flatbuffers/: dune  js_dataview.ml
web-jsoo/graph/: dune
web-jsoo/print/: dune
web-jsoo/tflite_schema/: dune
web-melange/: dune  tfview_mel.ml
web-melange/bigstringaf/: bigstringaf.ml  dune
web-melange/flatbuffers/: dune  js_dataview.ml
web-melange/graph/: dune
web-melange/model_explorer/: dune  jsont.ml
web-melange/print/: dune
web-melange/tflite_schema/: dune
web-melange/web/: dune  test_browser.js  test_web.js  tfview_mel_web.ml
web-melange/web/static/: index.html
web/static/: graph.html  index.html  landing.html
