(executable
 (name tfview_web)
 (modes js)
 (libraries tfview_print js_of_ocaml)
 (preprocess
  (pps js_of_ocaml-ppx)))

(rule
 (target tfview.js)
 (deps tfview_web.bc.js)
 (action
  (copy %{deps} %{target})))

(rule
 (target index.html)
 (deps
  (:src %{workspace_root}/web/static/index.html))
 (action
  (copy %{src} %{target})))
