; OCaml ctypes bindings over the ATen "core" C++ subset.
;
; The C++ artifacts (libaten_core.a, dllaten_core.so) and the shim header are
; built in modules/aten_core; pull them into this library's build dir so
; (foreign_archives aten_core) and the ctypes preamble #include can find them.
; These are dune build targets (not the excluded pytorch submodule), so plain
; cross-directory copy rules work.

(rule
 (copy ../../modules/aten_core/libaten_core.a libaten_core.a))

(rule
 (copy ../../modules/aten_core/dllaten_core.so dllaten_core.so))

(rule
 (copy ../../modules/aten_core/shim.h shim.h))

(rule
 (copy ../../modules/aten_core/ops.h ops.h))

(library
 (name aten)
 (libraries ctypes-foreign bigarray)
 (foreign_archives aten_core)
 (ctypes
  (external_library_name libaten_core)
  (build_flags_resolver
   (vendored
    (c_flags :standard)
    ; Link the static-dispatch archive with lld + --gc-sections: the generated
    ; glue is built with -ffunction-sections so GC trims the ~2600 unreached
    ; at::cpu:: op wrappers down to the add/mul closure. lld is essential — GNU
    ; ld takes minutes (often hangs) doing this GC over the giant objects.
    ; --no-export-dynamic undoes ocamlopt's default -E: otherwise every global
    ; symbol is a GC root and --gc-sections keeps the whole archive.
    (c_library_flags
     :standard
     -fuse-ld=lld
     -Wl,--gc-sections
     -Wl,--no-export-dynamic
     -lstdc++
     -lpthread)))
  (headers
   (preamble "#include \"shim.h\"\n#include \"ops.h\""))
  (type_description
   (instance Types)
   (functor Type_description))
  ; Tensor API (function_description.ml) and operations (operation_description.ml)
  ; bind separately; both land under the single C entry point as C.Functions
  ; and C.Operations. The operations half is the future autogen target.
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Function_description))
  (function_description
   (concurrency unlocked)
   (instance Operations)
   (functor Operation_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
