(copy_files
 (files %{workspace_root}/modules/flatbuffers/ocaml/lib/builder.{ml,mli}))

(copy_files
 (files %{workspace_root}/modules/flatbuffers/ocaml/lib/flatbuffers.ml))

(copy_files
 (files %{workspace_root}/modules/flatbuffers/ocaml/lib/read.{ml,mli}))

(copy_files
 (files %{workspace_root}/modules/flatbuffers/ocaml/lib/runtime_intf.ml))

(copy_files
 (files %{workspace_root}/modules/flatbuffers/ocaml/lib/runtime.mli))

(copy_files
 (files %{workspace_root}/modules/flatbuffers/ocaml/lib/util.{ml,mli}))

(copy_files
 (files %{workspace_root}/modules/flatbuffers/ocaml/js_dataview.mli))

(rule
 (target primitives.ml)
 (deps
  (:src %{workspace_root}/modules/flatbuffers/ocaml/lib/primitives.ml))
 (action
  (run
   %{bin:cppo}
   -D
   JSDATAVIEW
   -I
   .
   -V
   OCAML:%{ocaml_version}
   %{src}
   -o
   %{target})))

(rule
 (target primitives.mli)
 (deps
  (:src %{workspace_root}/modules/flatbuffers/ocaml/lib/primitives.mli))
 (action
  (run
   %{bin:cppo}
   -D
   JSDATAVIEW
   -I
   .
   -V
   OCAML:%{ocaml_version}
   %{src}
   -o
   %{target})))

(rule
 (target runtime.ml)
 (deps
  (:src %{workspace_root}/modules/flatbuffers/ocaml/lib/runtime.ml))
 (action
  (run
   %{bin:cppo}
   -D
   JSDATAVIEW
   -I
   .
   -V
   OCAML:%{ocaml_version}
   %{src}
   -o
   %{target})))

(library
 (name flatbuffers_jsoo)
 (wrapped false)
 (libraries js_of_ocaml)
 (preprocess
  (pps js_of_ocaml-ppx)))
